--- a/iohelper/pom.xml
+++ b/iohelper/pom.xml
@@ -4,10 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.iotest</groupId>
+    <groupId>com.fujitsu.fs.iohelper</groupId>
     <artifactId>iohelper</artifactId>
-    <version>0.1-SNAPSHOT</version>
-
+    <version>0.2-SNAPSHOT</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -16,4 +21,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
 </project>
